2019-01-22  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1202

	* src/methods.cc: I had misspelled the GOUT in
	transmittanceFromIy_aux. The corrected name is *transmittance*.

2019-01-21  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1201
	
	WARNING:  Breaks runs that does not initialize the magnetic
	field tensors while using the x-functions.
	
	FIX: Use Touch on mag_u_field, mag_v_field, and mag_w_field to
	make presently working controlfiles (and typhon scripts) work identical
	to how they were before this update
	
	* src/m_oem.cc,methods.cc: Adding magnetic field to the x-functions.
	The normal fields are copies from the wind functions, but I also added
	"strength", since I think it is a better retrieval target than the
	fields.

2019-01-21  Richard Larsson  <larsson@mps.mpg.de>

	* arts-2-3-1200
	
	Ps.  It seemsn the nlte-test does indeed speed-up as it should, but
	that my IDE is buggy presently.  Ignore the comment I made about this
	for 2-3-1197.
	
	* src/linerecord.h:  Added helper to get at Zeeman polarization
	
	* src/zeeman.cc,h:  Changed interface to zeemandata to reduce
	calls to polarization computing functions
	
	* src/zeemandata.cc,h:  Changed so the polarization state is computed
	only once instead of for every line.  Shaves about 10% off of normal
	computations.  Also removed some wrongly interpreted reach-end-of-file
	warnings where gcc got confused by throwing at the end of the files
	(in what I hope other compilers will not recognize as unreachable code
	and warn for other reasons)

2019-01-20  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-1199

	* src/m_surface.cc (transmittanceFromIy_aux): New WSM.

	* src/m_transmitter.cc (iyTransmissionStandard,iyTransmissionStandardOld):
	* src/m_rte.cc (iyEmissionStandard,iyEmissionStandardOld):
	* src/m_cloudradar.cc (iyActiveSingleScat,iyActiveSingleScat2):
	Changed setting of iy_aux for variables following the pattern of